# Programming-classes-and-shablones

lab1/: CMakeLists.txt  main.cpp
lab1/minus/: CMakeLists.txt  minus.cpp  minus.h
